--- a/wp-content/themes/JRonstage-golive032918/style.css
+++ b/wp-content/themes/JRonstage-golive032918/style.css
@@ -15,6 +15,7 @@
     RESPONSIVE
 \*------------------------------------*/
 
+/*
 @media only screen and (min-width:320px) {
 
 }
@@ -35,4 +36,4 @@
 }
 @media only screen and (-webkit-min-device-pixel-ratio:1.5),
 	   only screen and (min-resolution:144dpi) {
-}
+}*/
